ListView 엘리먼트 변경 (div --> ul & li)

--- a/src/less/any.less
+++ b/src/less/any.less
@@ -18,11 +18,9 @@ body {
 
     }
   }
-  .view {
-    &.list-view {
-      .list-view-item {
+  .list-view {
+    .list-view-item {
 
-      }
     }
   }
 }
