--- a/src/less/any.ui.less
+++ b/src/less/any.ui.less
@@ -12,8 +12,31 @@
       outline: 0;
     }
     .menu {
+      &ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        &:after {
+          content: "";
+          display: block;
+          clear: both;
+        }
+      }
       .menu-item {
-
+        &li {
+          float: left;
+          width: auto;
+          a {
+            display: block;
+            padding: 5px;
+            color: #000000;
+            font-size: 14px;
+            text-decoration: none;
+            &:hover {
+              background-color: #eeeeee;
+            }
+          }
+        }
       }
     }
   }
