--- a/src/less/any.ui.less
+++ b/src/less/any.ui.less
@@ -11,31 +11,27 @@
       -webkit-overflow-scrolling: touch;
       outline: 0;
     }
-    .menu {
-      &ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        &:after {
-          content: "";
-          display: block;
-          clear: both;
-        }
-      }
-      .menu-item {
-        &li {
-          float: left;
-          width: auto;
-          a {
-            display: block;
-            padding: 5px;
-            color: #000000;
-            font-size: 14px;
-            text-decoration: none;
-            &:hover {
-              background-color: #eeeeee;
-            }
-          }
+  }
+  ul.menu {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    &:after {
+      content: "";
+      display: block;
+      clear: both;
+    }
+    li.menu-item {
+      float: left;
+      width: auto;
+      a {
+        display: block;
+        padding: 5px;
+        color: #000000;
+        font-size: 14px;
+        text-decoration: none;
+        &:hover {
+          background-color: #eeeeee;
         }
       }
     }
