--- a/src/jade/layout.jade
+++ b/src/jade/layout.jade
@@ -1,7 +1,9 @@
-doctype html
-html(lang="en")
+doctype transitional
+html
   head
-    title ANY
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    title Anyplace, Anywhere, Anytime
     link(rel='stylesheet', href='css/any.css')
   body
     block content
