--- a/src/less/any.ui.less
+++ b/src/less/any.ui.less
@@ -37,3 +37,13 @@
     }
   }
 }
+
+/* ########### 599px 이하 ########### */
+@media (max-width: 599px) {
+  .any {
+    li.menu a {
+      padding: 10px 3px;
+      font-size: 11px;
+    }
+  }
+}
