--- a/src/jade/layout.jade
+++ b/src/jade/layout.jade
@@ -5,6 +5,10 @@ html
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     title Anyplace, Anywhere, Anytime
     link(rel='stylesheet', href='css/any.css')
+    <!--[if lt IE 9]>
+    script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
+    script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
+    <![endif]-->
   body
     block content
 
