--- a/src/jade/layout.jade
+++ b/src/jade/layout.jade
@@ -3,7 +3,9 @@ html
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Anyplace, Anywhere, Anytime
+    link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css')
     link(rel='stylesheet', href='css/any.css')
     <!--[if lt IE 9]>
     script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
