--- a/src/less/any.ui-default.less
+++ b/src/less/any.ui-default.less
@@ -6,7 +6,11 @@
       }
     }
     &.photo {
-
+      img {
+        max-width: 100%;
+        height: auto;
+        vertical-align: bottom;
+      }
     }
     &.pickup {
 
