--- a/src/less/any.less
+++ b/src/less/any.less
@@ -1,6 +1,7 @@
 @import (inline) "normalize.css/normalize.css";
 
 body {
+  margin: 0;
   font-family: '맑은 고딕', 'Apple SD Gothic Neo', sans-serif;
 }
 
@@ -9,10 +10,8 @@ body {
     float: left;
   }
   .box {
-
   }
   .layer {
-    padding: 20px 15px 10px 15px;
   }
   .list-view {
     .list-view-item {
@@ -24,9 +23,6 @@ body {
 /* ########## 1190px 이상 ########## */
 @media (min-width: 1190px) {
   .layer {
-    width: 1140px;
-    margin-left: auto;
-    margin-right: auto;
   }
 }
 
