공지사항 추가

--- a/src/jade/layout.jade
+++ b/src/jade/layout.jade
@@ -4,7 +4,7 @@ html
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    title Anyplace, Anywhere, Anytime
+    title ANY
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css')
     link(rel='stylesheet', href='css/any.css')
     <!--[if lt IE 9]>
