--- a/src/less/any.ui.less
+++ b/src/less/any.ui.less
@@ -12,24 +12,29 @@
       outline: 0;
     }
   }
-  ul.menu {
-    margin: 0;
-    padding: 0;
+  ul {
     list-style: none;
+    &.menu {
+      margin: 0;
+      padding: 0;
+    }
     &:after {
       content: "";
       display: block;
       clear: both;
     }
-    li.menu-item {
-      float: left;
-      width: auto;
+    li {
+      &.menu-item {
+        float: left;
+        width: auto;
+      }
       a {
         display: block;
         padding: 5px;
         color: #000000;
         font-size: 14px;
         text-decoration: none;
+        cursor: pointer;
         &:hover {
           background-color: #eeeeee;
         }
