--- a/src/less/any.ui-default.less
+++ b/src/less/any.ui-default.less
@@ -24,9 +24,12 @@
       //padding-bottom: 20px;
       padding: 20px;
       .info-main {
-        width: 70% !important;
-        padding: 20px;
-        border: solid 5px #dddddd;
+        width: 100% !important;
+        padding-bottom: 20px;
+        .news {
+          padding: 20px;
+          border: solid 5px #dddddd;
+        }
         h1 {
           margin-top: 0;
           margin-bottom: 5px;
@@ -36,7 +39,7 @@
         li {
           a {
             border-bottom: dotted 2px #dddddd;
-            &:after	{
+            &:after {
               content: "";
               display: block;
               clear: both
@@ -56,7 +59,42 @@
         }
       }
       .info-sub {
-        width: 30% !important;
+        width: 100% !important;
+        ul {
+          margin: 0;
+          padding: 0;
+          list-style: none;
+          li a {
+            display: block;
+            margin-bottom: 10px;
+            padding: 10px;
+            border-radius: 4px;
+            color: #ffffff;
+            font-size: 14px;
+            text-decoration: none;
+            &:hover {
+              opacity: 0.8;
+              background-color: #eeeeee;
+            }
+            &.follow-tw {
+              background-color: #63bafb;
+            }
+            &.follow-fb {
+              background-color: #5288f7;
+            }
+            &.follow-gp {
+              background-color: #f65d4a;
+            }
+            &.fa-twitter:before {
+              content: "\f099";
+            }
+          }
+        }
+        i {
+          margin-right: 10px;
+          font-size: 24px;
+          vertical-align: middle;
+        }
       }
     }
     &.footer {
@@ -99,6 +137,17 @@
       &.header {
         .menu {
           float: right;
+        }
+      }
+      &.info {
+        .info-main {
+          width: 70% !important;
+          padding-right: 35px;
+          box-sizing: border-box;
+        }
+        .info-sub {
+          float: left;
+          width: 30% !important;
         }
       }
     }
