--- a/src/less/any.less
+++ b/src/less/any.less
@@ -6,6 +6,12 @@ body {
 }
 
 .any {
+  .show {
+    display: block;
+  }
+  .hide {
+    display: none;
+  }
   ul {
     list-style: none;
     margin: 0;
