--- a/src/less/any.less
+++ b/src/less/any.less
@@ -6,11 +6,13 @@ body {
 }
 
 .any {
-  .show {
-    display: block;
-  }
-  .hide {
+  .control {
     display: none;
+    opacity: 0;
+    &.show {
+      display: block;
+      opacity: 1;
+    }
   }
   ul {
     list-style: none;
