--- a/src/less/any.less
+++ b/src/less/any.less
@@ -6,13 +6,9 @@ body {
 }
 
 .any {
-  .control {
+  .hidden {
     display: none;
     opacity: 0;
-    &.show {
-      display: block;
-      opacity: 1;
-    }
   }
   ul {
     list-style: none;
