--- a/any.css
+++ b/any.css
@@ -460,13 +460,9 @@ body {
   margin: 0;
   font-family: '맑은 고딕', 'Apple SD Gothic Neo', sans-serif;
 }
-.any .control {
+.any .hidden {
   display: none;
   opacity: 0;
-}
-.any .control.show {
-  display: block;
-  opacity: 1;
 }
 .any ul {
   list-style: none;
