--- a/any.css
+++ b/any.css
@@ -14,6 +14,9 @@
   display: block;
   clear: both;
 }
+.any ul.context-menu {
+  position: absolute;
+}
 .any ul li.menu-item {
   float: left;
   width: auto;
