--- a/src/less/any.less
+++ b/src/less/any.less
@@ -10,28 +10,68 @@ body {
         display: none;
         opacity: 0;
     }
-    ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    }
     .item {
         float: left;
     }
     .box {
     }
-    .layer {
-    }
     .list-view {
-        .list-view-item {
+        > .list-view-item {
 
         }
+    }
+    .menu {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        > .menu-item {
+            float: left;
+            width: auto;
+            a {
+                display: block;
+                padding: 5px;
+                font-size: 14px;
+                text-decoration: none;
+                cursor: pointer;
+                &:hover {
+                    background-color: #eeeeee;
+                }
+            }
+        }
+        &:after {
+            content: "";
+            display: block;
+            clear: both;
+        }
+    }
+    .context-menu {
+        position: absolute;
+        .context-menu-item {
+
+        }
+    }
+    .layer {
+    }
+    .dialog {
+        display: none;
+        overflow: hidden;
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        -webkit-overflow-scrolling: touch;
+        outline: 0;
     }
 }
 
 /* ########## 599px 이하 ########## */
 @media (max-width: 599px) {
-    .layer {
+    .any {
+        li.menu a {
+            padding: 10px 3px;
+            font-size: 11px;
+        }
     }
 }
 
