--- a/any.css
+++ b/any.css
@@ -1,44 +1,3 @@
-.any .layer.dialog {
-  display: none;
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  -webkit-overflow-scrolling: touch;
-  outline: 0;
-}
-.any ul:after {
-  content: "";
-  display: block;
-  clear: both;
-}
-.any ul.context-menu {
-  position: absolute;
-}
-.any ul li.menu-item {
-  float: left;
-  width: auto;
-}
-.any ul li a {
-  display: block;
-  padding: 5px;
-  font-size: 14px;
-  text-decoration: none;
-  cursor: pointer;
-}
-.any ul li a:hover {
-  background-color: #eeeeee;
-}
-/* ########### 599px 이하 ########### */
-@media (max-width: 599px) {
-  .any li.menu a {
-    padding: 10px 3px;
-    font-size: 11px;
-  }
-}
-
 /*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
 
 /**
@@ -467,15 +426,54 @@ body {
   display: none;
   opacity: 0;
 }
-.any ul {
+.any .item {
+  float: left;
+}
+.any .menu {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.any .item {
+.any .menu > .menu-item {
   float: left;
+  width: auto;
+}
+.any .menu > .menu-item a {
+  display: block;
+  padding: 5px;
+  font-size: 14px;
+  text-decoration: none;
+  cursor: pointer;
+}
+.any .menu > .menu-item a:hover {
+  background-color: #eeeeee;
+}
+.any .menu:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.any .context-menu {
+  position: absolute;
+}
+.any .dialog {
+  display: none;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  -webkit-overflow-scrolling: touch;
+  outline: 0;
 }
 /* ########## 599px 이하 ########## */
+@media (max-width: 599px) {
+  .any li.menu a {
+    padding: 10px 3px;
+    font-size: 11px;
+  }
+}
 /* ########## 768px 이상 ########## */
 @media (min-width: 768px) {
   .any .box.horizontal:after {
