carousel 컨트롤 추가

--- a/src/less/any.less
+++ b/src/less/any.less
@@ -50,6 +50,12 @@ body {
 
         }
     }
+    .carousel {
+        position: relative;
+        .carousel-item {
+            position: absolute;
+        }
+    }
     .layer {
     }
     .dialog {
