--- a/src/less/any.less
+++ b/src/less/any.less
@@ -51,6 +51,28 @@ body {
             clear: both;
         }
     }
+    .navigation {
+        .prev {
+
+        }
+        .next {
+
+        }
+    }
+    .pagination {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        .pagination-item {
+            float: left;
+            width: auto;
+        }
+        &:after {
+            content: "";
+            display: block;
+            clear: both;
+        }
+    }
     .context-menu {
         position: absolute;
         .context-menu-item {
