--- a/any.css
+++ b/any.css
@@ -468,6 +468,18 @@ body {
 .any .pagination .pagination-item {
   float: left;
   width: auto;
+  cursor: pointer;
+}
+.any .pagination .pagination-item span {
+  display: block;
+  width: 12px;
+  height: 12px;
+  margin: 5px 7px;
+  border-radius: 20px;
+  background: #808080;
+}
+.any .pagination .pagination-item.selected span {
+  background: #505050;
 }
 .any .pagination:after {
   content: "";
