--- a/src/less/any.less
+++ b/src/less/any.less
@@ -66,6 +66,20 @@ body {
         .pagination-item {
             float: left;
             width: auto;
+            cursor: pointer;
+            span {
+                display: block;
+                width: 12px;
+                height: 12px;
+                margin: 5px 7px;
+                -webkit-border-radius: 20px;
+                -moz-border-radius: 20px;
+                border-radius: 20px;
+                background: #808080;
+            }
+            &.selected span {
+                background: #505050;
+            }
         }
         &:after {
             content: "";
